--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -16,7 +16,7 @@
 \usepackage{listings}
 \usepackage{amsmath}
 \usepackage[toc,page]{appendix}
-\usepackage{biblatex}
+\usepackage[sorting=none]{biblatex}
 \usepackage{listings}
 \usepackage{color}
 \usepackage{parskip}
